# VectorDBBench

./: .editorconfig  .env.example  .gitignore  .ruff.toml  AGENT.md  AGENTS.md  DESIGN.md  Dockerfile  LICENSE  Makefile  OWNERS  README.md  README_ENVECTOR.md  SESSION_PROGRESS.md  install.py  pgdiskann_results.csv  pyproject.toml  requirements.txt  run.py  split_fts_dataset.py  tempCodeRunnerFile.py  test.py  testclient.py  typos.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: close_stale_issues.yml  docker.yml  keep_open_command.yml  publish_package_on_release.yml  pull_request.yml
.streamlit/: config.toml
benchmark_run_utils/: utils.py
ci-transwarp/: Dockerfile  Note.md  pip.conf
dataset/: qrels.dev.100k.tsv  queries.dev.100k.tsv
docs/: fts-e2e-testing-plan.md  fts-feature-review-checklist.md
docs/fts-backends/: elasticsearch.md  milvus.md  turbopuffer.md  vespa.md
docs/release/: 2026-05-cloud-leadboard.md  2026-05-cloud-leaderboard.md  2026-06-full-text-search.md
docs/superpowers/plans/: 2026-05-13-cloud-cold-latency-case.md  2026-05-13-multitenant-vdbbench.md  2026-05-27-fts-bm25-implementation-plan.md
docs/superpowers/specs/: 2026-05-12-multitenant-vdbbench-design.md  2026-05-13-cloud-cold-latency-case-design.md  2026-05-26-fts-dataset-options-design.md  2026-05-26-fts-implementation-overall-design.md
falcon_mark/: __init__.py  __main__.py  config.py  interface.py  metric.py  models.py
falcon_mark/backend/: assembler.py  case.py  cases.py  dataset.py  utils.py
falcon_mark/backend/clients/: api.py  milvus.py
falcon_mark/frontend/: const.py  home.py  run_test.py
fts_results/: AGENTS.md  README.md  experiment-settings.md  report.md
fts_results/ElasticSearch/hotpotqa/: report.md
fts_results/ElasticSearch/msmarco/: report.md
fts_results/Milvus/hotpotqa/: report.md
fts_results/Milvus/msmarco/: report.md
fts_results/Turbopuffer/hotpotqa/: report.md
fts_results/Turbopuffer/msmarco/: report.md
fts_results/Vespa/hotpotqa/: report.md
fts_results/Vespa/msmarco/: report.md
groundtruth/cohere_large_10m/: neighbors_labels_label_0.1p.parquet  neighbors_labels_label_1p.parquet
groundtruth/cohere_medium_1m/: neighbors_labels_label_10p.parquet  neighbors_labels_label_1p.parquet
install/: requirements_py3.11.txt
s3vbench/: .gitignore  Makefile  README.md  go.mod
s3vbench/cmd/s3vbench/: main.go
s3vbench/internal/report/: writer.go  writer_test.go
s3vbench/internal/runner/: client.go  runner.go  runner_test.go  signed_http_client.go  signed_http_client_test.go
s3vbench/internal/synth/: generator.go  generator_test.go
s3vbench/internal/workload/: config.go  config_test.go  filter.go  filter_test.go
s3vbench/scripts/: build.sh  run-aws.sh  run-local.sh
sample-configs/: config-small-hnsw-label-filter-1p.json
scripts/: benchmark.sh  envector_benchmark_config.yml  envector_bloomberg_config.yml  envector_pubmed_config.yml  prepare_dataset.py  prepare_neighbors.py  run_benchmark.sh
tests/: conftest.py  pytest.ini  test_adbpg.py  test_aliyun_milvus.py  test_aws_opensearch_cli.py  test_bench_runner.py  test_case.py  test_case_runner_reuse.py  test_chroma.py  test_cli_note.py  test_cloud_cold_latency_case.py  test_cloud_insert_case.py  test_cloud_payload_case.py  test_cloud_payload_search.py  test_cockroachdb.py  test_concurrent_runner.py  test_data_source.py  test_dataset.py  test_db_client_resolution.py  test_elasticsearch_binary_config.py  test_elasticsearch_cloud.py  test_frontend_run_settings.py  test_fts_backend_capability.py  test_fts_backend_filters.py  test_fts_cases.py  test_fts_cli_user_control.py  test_fts_dataset.py  test_fts_elastic_cloud.py  test_fts_filter_runner.py  test_fts_format_results.py  test_fts_metrics.py  test_fts_milvus.py  test_fts_runners.py  test_fts_turbopuffer.py  test_fts_vespa.py  test_hyperspacedb.py  test_insert_control_cli.py  test_insert_control_contract.py  test_insert_control_runners.py  test_lancedb_config.py  (+22 more)
ui控制conc/: ui控制conc
vector_db_bench/: __init__.py  __main__.py  base.py  config.py  db_case_config.py  db_config.py  interface.py  log_util.py  metric.py  models.py  result_collector.py
vector_db_bench/backend/: assembler.py  case.py  cases.py  dataset.py  metric.py  result.py  result_collector.py  task_runner.py  utils.py
vector_db_bench/backend/cases/: case.py
vector_db_bench/cases/: case.py
vector_db_bench/clients/: api.py  milvus_client.py
vector_db_bench/frontend/: const.py  run_test.py  utils.py  vdb_benchmark.py
vector_db_bench/results/: result.py  result_20230601_milvus-2c8g-disk-100k.json  result_20230601_milvus-2c8g-disk-1m.json  result_20230601_milvus-2c8g-disk-load-sdim.json  result_20230601_milvus-4c16g-disk-100k.json  result_20230601_milvus-4c16g-disk-1m.json  result_20230601_zc-1cu-disk-100k.json  result_20230601_zc-1cu-disk-1m.json  result_20230601_zc-1cu-disk-load-ldim.json  result_20230601_zc-1cu-disk-load-sdim.json  result_20230601_zc-2cu-disk-100k.json  result_20230601_zc-2cu-disk-1m.json  result_20230602_standard.json  result_20230605_standard.json  result_20230609_standard.json
vectordb_bench/: __init__.py  __main__.py  base.py  interface.py  log_util.py  metric.py  models.py
vectordb_bench/backend/: assembler.py  cases.py  data_source.py  dataset.py  filter.py  payload.py  result_collector.py  task_runner.py  utils.py  workload.py
vectordb_bench/cli/: batch_cli.py  cli.py  vectordbbench.py
vectordb_bench/config-files/: batch_sample_config.yml  config.yml  elastic.yml  elastic_both.yml  elastic_int.yml  elastic_label.yml  elastic_quantized.yml  sample_config.yml  vexdb_config.yml
vectordb_bench/custom/: custom_case.json
vectordb_bench/frontend/: const.py  utils.py  vdb_benchmark.py  vdbbench.py
vectordb_bench/myenv/: pyvenv.cfg
vectordb_bench/restful/: app.py  format_res.py
vectordb_bench/results/: dbPrices.json  getLeaderboardData.py  getLeaderboardDataV2.py  leaderboard.json  leaderboard_v2.json  leaderboard_v2_streaming.json  result_20230609_standard.json  result_20230705_standard.json
(+620 files in other folders)
